RESOLVED FIXED104057
[V8] V8DOMWrapper shouldn't know about NodeFilter
https://bugs.webkit.org/show_bug.cgi?id=104057
Summary [V8] V8DOMWrapper shouldn't know about NodeFilter
Adam Barth
Reported 2012-12-04 16:14:00 PST
[V8] V8DOMWrapper shouldn't know about NodeFilter
Attachments
Patch (6.08 KB, patch)
2012-12-04 16:14 PST, Adam Barth
no flags
Adam Barth
Comment 1 2012-12-04 16:14:59 PST
Kentaro Hara
Comment 2 2012-12-04 16:16:30 PST
Comment on attachment 177597 [details] Patch ok
Adam Barth
Comment 3 2012-12-04 16:52:18 PST
Comment on attachment 177597 [details] Patch Clearing flags on attachment: 177597 Committed r136595: <http://trac.webkit.org/changeset/136595>
Adam Barth
Comment 4 2012-12-04 16:52:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.