[V8] V8DOMWrapper shouldn't know about NodeFilter https://bugs.webkit.org/show_bug.cgi?id=104057

Reviewed by Kentaro Hara.

This patch just moves this code into V8Bindings.h, which is where we
have our other type conversion functions. It's too bad that we still
need to special case NodeFilter, but fixing that is going to be a bit
more work.

* bindings/scripts/CodeGeneratorV8.pm:
(JSValueToNative):
* bindings/v8/V8Binding.cpp:
(WebCore::toNodeFilter):
(WebCore):
* bindings/v8/V8Binding.h:
(WebCore):
* bindings/v8/V8DOMWrapper.cpp:
* bindings/v8/V8DOMWrapper.h:
(WebCore):
(V8DOMWrapper):


Canonical link: https://commits.webkit.org/122177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136595 268f45cc-cd09-0410-ab3c-d52691b4dbfc